# MORAI-ROS2_morai_msgs

./: 404.html  CMakeLists.txt  README.md  docs-requirements.txt  generate_docs.py  index.html  mkdocs.yml  package.xml
.github/workflows/: docs.yml
dev/: 404.html  index.html
dev/messages/: index.html
dev/search/: search_index.json
dev/services/: index.html
docs/: build_version.sh  generate_docs.py  index.md
docs/messages/: CollisionData.md  CtrlCmd.md  EgoVehicleStatus.md  EventInfo.md  GPSMessage.md  GetTrafficLightStatus.md  GhostCmd.md  IntersectionControl.md  IntersectionStatus.md  Lamps.md  MapSpec.md  MoraiSimProcHandle.md  MoraiSimProcStatus.md  MoraiSrvResponse.md  MultiEgoSetting.md  NpcGhostCmd.md  NpcGhostInfo.md  ObjectStatus.md  ObjectStatusList.md  RadarDetection.md  RadarDetections.md  ReplayInfo.md  SaveSensorData.md  ScenarioLoad.md  SensorPosControl.md  SetTrafficLight.md  TrafficLightIndex.md  TrafficLightInfo.md  VehicleCollision.md  VehicleCollisionData.md  VehicleSpec.md  VehicleSpecIndex.md  index.md
docs/services/: EventCmd.md  MapSpec.md  MoraiSimProc.md  ScenarioLoad.md  TrafficLightInfo.md  VehicleSpec.md  index.md
messages/: index.html
messages/CollisionData/: index.html
messages/CtrlCmd/: index.html
messages/EgoVehicleStatus/: index.html
messages/EventInfo/: index.html
messages/GPSMessage/: index.html
messages/GetTrafficLightStatus/: index.html
messages/GhostCmd/: index.html
messages/IntersectionControl/: index.html
messages/IntersectionStatus/: index.html
messages/Lamps/: index.html
messages/MapSpec/: index.html
messages/MoraiSimProcHandle/: index.html
messages/MoraiSimProcStatus/: index.html
messages/MoraiSrvResponse/: index.html
messages/MultiEgoSetting/: index.html
messages/NpcGhostCmd/: index.html
messages/NpcGhostInfo/: index.html
messages/ObjectStatus/: index.html
messages/ObjectStatusList/: index.html
messages/RadarDetection/: index.html
messages/RadarDetections/: index.html
messages/ReplayInfo/: index.html
messages/SaveSensorData/: index.html
messages/ScenarioLoad/: index.html
messages/SensorPosControl/: index.html
messages/SetTrafficLight/: index.html
messages/TrafficLightIndex/: index.html
messages/TrafficLightInfo/: index.html
messages/VehicleCollision/: index.html
messages/VehicleCollisionData/: index.html
messages/VehicleSpec/: index.html
messages/VehicleSpecIndex/: index.html
msg/: AutoDoorCtrlCmd.msg  CollisionData.msg  CtrlCmd.msg  EVCtrlCmd.msg  EVStatus.msg  EgoVehicleStatus.msg  ElevatorCtrlCmd.msg  EventInfo.msg  GPSMessage.msg  GenericVehicleControl.msg  GetTrafficLightStatus.msg  GhostCmd.msg  GhostMessage.msg  GuideData.msg  IntersectionControl.msg  IntersectionStatus.msg  Lamps.msg  MapSpec.msg  MgeoLinkList.msg  MgeoNodeList.msg  MoraiSimConfig.msg  MoraiSimProcHandle.msg  MoraiSimProcStatus.msg  MoraiSrvResponse.msg  MoraiTimestamp.msg  MultiEgoSetting.msg  NpcGhostCmd.msg  NpcGhostInfo.msg  ObjectInfo.msg  ObjectStatusList.msg  RadarDetection.msg  RadarDetections.msg  ReplayInfo.msg  SVehicleStatus.msg  SaveSensorData.msg  ScenarioLoad.msg  SensorPosControl.msg  SetTrafficLight.msg  SkidCtrlCmd.msg  SpeedGateStatus.msg  (+5 more)
search/: search_index.json
services/: index.html
services/EventCmd/: index.html
services/MapSpec/: index.html
services/MoraiSimProc/: index.html
srv/: ElevatorStatusSrv.srv  EventCmd.srv  MapSpec.srv  MoraiSimProc.srv  ScenarioLoad.srv  TrafficLightInfo.srv  VehicleSpec.srv
(+41 files in other folders)
